--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,7 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/jekyll_demo" # the subpath of your site
 url: "https://akhalsa.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  akhalsa
 
 # Build settings
 theme: minima
