--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  akhalsa
 
 # Build settings
-remote_theme: pages-themes/leap-day@v0.2.0
+theme: jekyll-theme-leap-day
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
