--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  akhalsa
 
 # Build settings
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: abhinavs/moonwalk
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
